--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,46 @@
+# dependencies
+node_modules
+.pnp
+.pnp.js
+
+# testing
+coverage
+
+# next.js
+.next/
+out/
+build
+dist
+
+# turbo
+.turbo
+
+# misc
+.DS_Store
+*.pem
+tmp
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
 .env
+.env.*
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.next/**/*
-.turbo/**/*
 
-node_modules
+# vercel
+.vercel
 
-.next
-.turbo
-tmp/**/*
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# IDE
+.idea
+.vscode
