--- a/apps/daox/package.json
+++ b/apps/daox/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 4000",
-    "build": "tsc && vite build --output public",
+    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview --port 4000",
     "typecheck": "tsc --noEmit",
