--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -15,11 +15,13 @@
     "@repo/ui": "*",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.47.10",
+    "framer-motion": "^11.17.0",
     "jotai": "^2.11.0",
     "next": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.14.1",
+    "react-share": "^5.1.2",
     "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
