--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -15,7 +15,7 @@
     "@repo/ui": "*",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.47.10",
-    "framer-motion": "^11.17.0",
+    "framer-motion": "^10.16.16",
     "jotai": "^2.11.0",
     "next": "^14.1.1",
     "react": "^18.2.0",
@@ -28,6 +28,7 @@
     "@next/eslint-plugin-next": "^14.1.1",
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.62",
     "@types/react-dom": "^18.2.19",
