--- a/apps/daox/vercel.json
+++ b/apps/daox/vercel.json
@@ -10,11 +10,6 @@
       "destination": "/index.html"
     }
   ],
-  "routes": [
-    {
-      "src": "/[^.]+",
-      "dest": "/",
-      "status": 200
-    }
-  ]
+  "cleanUrls": true,
+  "trailingSlash": false
 }
