--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "packages/*"
   ],
   "dependencies": {
+    "@next/third-parties": "^15.1.6",
     "framer-motion": "^11.16.4",
+    "next": "^15.1.6",
     "next-seo": "^6.6.0",
     "react-share": "^5.1.2"
   }
